--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "monwvx",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "mon",
   "main": "dist/mon.js",
   "scripts": {
@@ -10,10 +10,12 @@
   "author": "monwvx",
   "license": "ISC",
   "devDependencies": {
+    "kpinyin": "^1.0.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
-  }
+  },
+  "dependencies": {}
 }
