--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "commonjs",
     "declaration": true,
     "outDir": "./dist",
-    "strict": true
+    "strict": true,
+    "lib": ["esnext"]
   },
   "exclude": ["dist", "node_modules"],
   "include": ["src"]
